tests/baselines/reference/duplicateLabel3.errors.txt
tests/cases/compiler/duplicateLabel3.ts(1,1): error TS7028: Unused label.
tests/cases/compiler/duplicateLabel3.ts(4,5): error TS7028: Unused label.


==== tests/cases/compiler/duplicateLabel3.ts (2 errors) ====
    target:
    ~~~~~~
!!! error TS7028: Unused label.
    while (true) {
      function f() {
        target:
        ~~~~~~
!!! error TS7028: Unused label.
        while (true) {
        }
      }
    }